--- a/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
@@ -56,7 +56,7 @@
 	<div class="row">
 		 <div class="col-12">
 		 	<div class="order-screen">
-				<h4 class="title order-title">Cấu hình đơn hàng</h4>
+				<h4 class="title order-title">Cấu hình loại đơn hàng</h4>
 				<th:block th:include="fragments/orders-configuration/frg_orders-configuration_v2.html"></th:block>
 			</div>
 		</div>
