--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -100,51 +100,50 @@
              
             <!--  <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" th:href="'https://myworkspace.vn/cas/login?service=http://localhost:8080/crm-web/j_spring_cas_security_check'" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">LOG IN</span></a> -->
         	 <li class="dropdown nav-item" data-menu="dropdown" data-step="6" data-intro="Hãy đăng nhập tại đây để sử dụng tại khoản">
-			    <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown">
+			   
 			        <!-- Kiểm tra trạng thái đăng nhập -->
-			        <span th:if="${#request.userPrincipal}" style="color: green; font-weight: bold;" 
-			        	  data-i18n="nav.templates.main">
-			       		<!-- Verified Account -->
-			       		<i class="icon-user"></i> 
-			       		<span data-i18n="nav.dash.main">
-							Chào mừng, <span th:text="${#request.userPrincipal.name}">User
-						</span>
-					</span>
-				</span>
+					<a th:if="${#request.userPrincipal}" style="color: green; font-weight: bold;" href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+				        <i class="icon-user"></i>
+				        <span>
+				            Chào mừng, <span th:text="${#request.userPrincipal.name}">User</span>
+				        </span>
+				    </a>
 			        
-			        <span th:unless="${#request.userPrincipal}" data-i18n="nav.templates.main">
-			        	<i class="icon-key"></i>Tài khoản
-			        </span>
-			    </a>
-			    <ul class="dropdown-menu">
-			        <!-- Kiểm tra nếu đã đăng nhập -->
-			       <!--  <li th:if="${#request.userPrincipal}" data-menu="">
-			            <a class="dropdown-item" href="#">
-			                <i class="icon-user"></i>
-			                <span data-i18n="nav.dash.main">
-			                    Welcome, <span th:text="${#request.userPrincipal.name}">User</span>
-			                </span>
-			            </a>
-			        </li> -->
-			        <li th:if="${#request.userPrincipal}" data-menu="">
+			        <a th:unless="${#request.userPrincipal}" th:href="${session.loginUrl}" class="dropdown-toggle nav-link" data-i18n="nav.templates.main">
+				        <i class="icon-login"></i>
+				        <span data-i18n="nav.templates.main">Đăng nhập</span>
+				    </a>
+<!-- 			    <ul class="dropdown-menu"> -->
+
+			        <li th:if="${#request.userPrincipal}" class="dropdown-toggle nav-link" data-i18n="nav.templates.main" data-menu="">
 			            <a class="dropdown-item" th:href="@{/logout-handler}">
-			                <i class="icon-logout"></i>Đăng xuất
+			                <i class="icon-logout"></i>
+			                <span data-i18n="nav.templates.main">Đăng xuất</span>
 			            </a>
 			        </li>
+			   </li>
+			   
+			    <li class="dropdown nav-item" data-menu="dropdown" data-step="7" data-intro="Đăng ký tài khoản">
+			        <a th:unless="${#request.userPrincipal}" th:href="${session.loginUrl}" class="dropdown-toggle nav-link" data-i18n="nav.templates.main">
+				        <i class="icon-pencil"></i>
+				        <span data-i18n="nav.templates.main">Đăng ký</span>
+				    </a>
+				</li>
+
 			
-			        <!-- Kiểm tra nếu chưa đăng nhập -->
-			        <li th:unless="${#request.userPrincipal}" data-menu="">
-			            <a class="dropdown-item" th:href="${session.loginUrl}">
-			                <i class="icon-login"></i>Đăng nhập
-			            </a>
-			        </li>
-			        <li th:unless="${#request.userPrincipal}" data-menu="">
-			            <a class="dropdown-item" href="/sign-up">
-			                <i class="icon-pencil"></i>Đăng ký
-			            </a>
-			        </li>
-			    </ul>
-			</li>
+<!-- 			        Kiểm tra nếu chưa đăng nhập -->
+<!-- 			        <li th:unless="${#request.userPrincipal}" data-menu=""> -->
+<!-- 			            <a class="dropdown-item" th:href="${session.loginUrl}"> -->
+<!-- 			                <i class="icon-login"></i>Đăng nhập -->
+<!-- 			            </a> -->
+<!-- 			        </li> -->
+<!-- 			        <li th:unless="${#request.userPrincipal}" data-menu=""> -->
+<!-- 			            <a class="dropdown-item" href="/sign-up"> -->
+<!-- 			                <i class="icon-pencil"></i>Đăng ký -->
+<!-- 			            </a> -->
+<!-- 			        </li> -->
+<!-- 			    </ul> -->
+			
 
         </ul>
     </div>
